--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Task Manager</title>
     <link href="/src/public/style/css/app.bundle.css" rel="stylesheet">
     <link href="/src/lib/css/angular-material/angular-material.min.css" rel="stylesheet">
@@ -25,9 +26,9 @@
 
     </div>
 
-    <script type="text/javascript" src="vendor.bundle.js"></script>
+    <script type="text/javascript" src="src/vendor.bundle.js"></script>
     <script src="https://www.gstatic.com/firebasejs/4.2.0/firebase.js"></script>
-    <script type="text/javascript" src="app.bundle.js"></script>
+    <script type="text/javascript" src="src/app.bundle.js"></script>
 
     <script>
         // Initialize Firebase
